# rust-dap

./: Cargo.toml  README.ja.md  README.md
.github/workflows/: CI.yml  release.yml
arm-debug/: Cargo.toml
arm-debug/src/: lib.rs  test.rs
boards/rpi_pico/: Cargo.toml  README.ja.md  README.md  build.rs
boards/rpi_pico/.cargo/: config.toml
boards/rpi_pico/src/: line_coding.rs  main.rs  swdio_pin.rs
boards/xiao_m0/: Cargo.toml  build.rs  memory.x
boards/xiao_m0/.cargo/: config.toml
boards/xiao_m0/src/: main.rs  swdio_pin.rs
boards/xiao_rp2040/: Cargo.toml  README.ja.md  README.md  build.rs  run-with-picotool.sh
boards/xiao_rp2040/.cargo/: config.toml
boards/xiao_rp2040/src/: main.rs  swdio_pin.rs
doc/: README.md  blink-demo.ja.md  gdb-debugger-proposal.ja.md  nrf-rtt-study.ja.md  redesign-proposal.ja.md  verification-2026-07-13.ja.md
rust-dap/: Cargo.toml  build.rs
rust-dap-rp2040/: Cargo.toml  build.rs  link.ram.x
rust-dap-rp2040/src/: bitbang.rs  bridge.rs  lib.rs  line_coding.rs  pio.rs  swdio_pin.rs  util.rs  v3.rs
rust-dap-rp2040/src/pio/: jtag.rs  mod.rs  swd.rs
rust-dap-xiao/: Cargo.toml
rust-dap-xiao/.cargo/: config.toml
rust-dap-xiao/blockbuffer/: Cargo.toml
rust-dap-xiao/blockbuffer/src/: lib.rs
rust-dap-xiao/src/: main.rs
rust-dap/src/: bitbang.rs  cmsis_dap.rs  cursor.rs  dispatcher.rs  interface.rs  lib.rs  transport.rs  usb.rs
rust-dap/src/v3/: bitbang.rs  dispatcher.rs  mod.rs  usb.rs
src/: cmsis_dap.rs  cursor.rs  interface.rs  lib.rs
uart-test/: Cargo.toml
uart-test/src/: lib.rs
