[package]
name = "rust-dap"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2"
nb = "0.1"
heapless = "0.7"
num_enum = {version = "0.5", default-features = false}
bitflags = "1.2"