[workspace]
resolver = "2"
members = [
    "rust-dap",
    "arm-debug",
    "rust-dap-rp2040",
    "boards/rpi_pico",
    "boards/xiao_rp2040",
    "boards/xiao_m0",
    "uart-test",
]
# `cargo build`/`cargo test` at the workspace root operate on the host
# testable crate only; boards are built from their own directories so that
# their .cargo/config.toml (target, runner, rustflags) applies.
default-members = ["rust-dap"]
# Untracked working directories (git worktrees etc.) that live inside the
# repository root must be excluded, otherwise cargo refuses to build them
# because they are not workspace members.
exclude = [
    "14-rp2040_boards",
    "17-english",
    "18-pico-pins",
    "22-change-serial",
    "24-implement_clock_speed",
    "29-init_reset_pin",
    "41-change-pico-default",
    "44-regression-main",
    "51-fix_stuck_uart",
    "blockbuffer",
    "cargo_clippy",
    "change_jtag_default_pin",
    "elfmimi",
    "fix-overflow-panic",
    "rp2040-pio",
    "rp2040-ram-exec",
    "rpipico-initial",
    "rust-dap-xiao",
    "support_jtag",
    "support_reset_pin_pio",
    "tnishinaga",
]

# Release profile shared by the firmware crates (profiles are only honored
# in the workspace root manifest).
[profile.release]
debug = 2
codegen-units = 1
opt-level = 3
lto = true
