[package]
name = "rust-dap-rp2040"
version = "0.4.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bitbang = ["embedded-hal", "rust-dap/bitbang"]
set_clock = [
] # Enable swj_clock implementation for bitbang and PIO and set appropriate SWCLK frequency. Otherwise, SWCLK is fixed to 15.625[MHz]
ram-exec = [] # Execute-in-SRAM support
defmt = ["dep:defmt"]

[dependencies]
rust-dap = { path = "../rust-dap" }
rp2040-boot2 = "0.2"
rp2040-hal = "0.10"
pio = "0.2"
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"

usb-device = { version = "0.3", features = ["control-buffer-256"] }
usbd-serial = "0.2"
heapless = "0.7"
embedded-hal = { version = "1", optional = true }
fugit = "0.3"
defmt = { version = "0.3", optional = true }
bitvec = { version = "1.0.1", default-features = false }
