[package]
name = "rust-dap-rp2040"
version = "0.3.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bitbang = [] # Use bit-banging transports instead of PIO
set_clock = [
] # Enable swj_clock implementation for bitbang and PIO and set appropriate SWCLK frequency. Otherwise, SWCLK is fixed to 15.625[MHz]
ram-exec = [] # Execute-in-SRAM support (linker script only; pick boot2-ram-memcpy or provide your own boot2)
# Transitional: library-provided boot2 blocks. Boards should define their own
# BOOT2_FIRMWARE static instead (the right block depends on the flash chip).
boot2-w25q080 = []
boot2-ram-memcpy = []
defmt = ["dep:defmt"]

[dependencies]
rust-dap = { path = "../rust-dap" }
rp2040-boot2 = "0.2"
rp2040-hal = "0.10"
pio = "0.2"
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"

usb-device = { version = "0.3", features = ["control-buffer-256"] }
usbd-serial = "0.2"
nb = "0.1"
heapless = "0.7"
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
fugit = "0.3"
defmt = { version = "0.3", optional = true }
bitvec = { version = "1.1", default-features = false }
