[package]
name = "rust-dap-xiao"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dap = { path = ".." }
xiao_m0 = { version = "0.9", features = ["usb", "unproven"]}
panic-halt = "0.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"

usb-device = { version = "0.2", features = ["control-buffer-256"]}
usbd-serial = "0.1"
nb = "0.1"
heapless = "0.7"
embedded-hal = "0.2"