[package]
name = "rust-dap"
version = "0.2.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bitbang = ["embedded-hal"]
unproven = []
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "0.3", optional = true }
usb-device = "0.2"
nb = "0.1"
heapless = "0.7"
num_enum = { version = "0.5", default-features = false }
bitflags = "1.2"
embedded-hal = { version = "0.2", optional = true, features = ["unproven"] }
