[package]
name = "rust-dap-raspberrypi-pico"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[features]
bitbang = ["rust-dap/bitbang", "rust-dap-rp2040/bitbang"]
pio_set_clock = ["rust-dap-rp2040/pio_set_clock"]   # Enable swj_clock implementation for PIO and set appropriate SWCLK frequency. Otherwise, SWCLK is fixed to 15.625[MHz]

[dependencies]
rust-dap = { path = "../../rust-dap", features = ["unproven"] }
rust-dap-rp2040 = { path = "../../rust-dap-rp2040", features = ["pio_set_clock"] }
rp-pico = { git = "https://github.com/rp-rs/rp-hal.git", rev = "8d18abdfc7c0129debba85457d32d32175bf36bd" }
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"

usb-device = { version = "0.2", features = ["control-buffer-256"]}
usbd-serial = "0.1"
nb = "0.1"
heapless = "0.7"
embedded-hal = { version = "0.2.6", features = ["unproven"]}
embedded-time = "0.12"