[package]
name = "rust-dap-xiao"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-dap = { path = "../../rust-dap" }
xiao_m0 = { version = "0.13", features = ["usb"] }
panic-halt = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rtic = { version = "2", features = ["thumbv6-backend"] }
# thumbv6m has no atomic CAS; RTIC 2 relies on portable-atomic emulating it
# through the cortex-m critical-section-single-core implementation above.
portable-atomic = { version = "1", features = ["critical-section"] }

usb-device = { version = "0.3", features = ["control-buffer-256"] }
usbd-serial = "0.2"
nb = "0.1"
heapless = "0.7"
embedded-hal = "1.0"
