[package]
name = "rust-dap-xiao-rp2040"
version = "0.2.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bitbang = ["rust-dap-rp2040/bitbang"]
set_clock = ["rust-dap-rp2040/set_clock"]   # Enable swj_clock implementation for PIO and set appropriate SWCLK frequency. Otherwise, SWCLK is fixed to 15.625[MHz]
ram-exec = ["rust-dap-rp2040/ram-exec"] # Execute-in-SRAM support

[dependencies.rp-pico]
version = "0.9"
# Below is to take out "boot2" from the set of features.
default-features = false
features = [ "rt", "critical-section-impl" ]

[dependencies]
rust-dap = { path = "../../rust-dap" }
rust-dap-rp2040 = { path = "../../rust-dap-rp2040" }
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2"
cortex-m-rtic = "1.0"

usb-device = { version = "0.3", features = ["control-buffer-256"]}
usbd-serial = "0.2"
nb = "0.1"
heapless = "0.7"
embedded-hal = "1.0"
